2012-11-15 belangeo <belangeo@gmail.com>

    * Added new object: SuperSaw: Roland JP-8000 Supersaw emulator.
    - rev 1029

2012-11-14 belangeo <belangeo@gmail.com>

    * Added new object: TablePut: Writes values, without repetitions, from an audio stream into a DataTable.
    - rev 1027

-------------------------------------------------------------------------------------

2012-10-26 belangeo <belangeo@gmail.com>

    * rev 1025: Release tag: 0.6.3.

2012-10-13 belangeo <belangeo@gmail.com>

    * Added new function: pa_get_devices_infos: Returns info about all devices found by Portaudio.
    - rev 1024

2012-10-12 belangeo <belangeo@gmail.com>

    * Added new object: SumOsc: Discrete summation formulae to produce complex spectra.
    - rev 1023

2012-10-11 belangeo <belangeo@gmail.com>

    * Added new method to OscReceive and OscListReceive: setValue(path, value) let the user to initialize the value for a given path.
    - rev 1022

2012-10-05 belangeo <belangeo@gmail.com>

    * Added new functions: pa_get_input_max_channels and pa_get_output_max_channels.
    - rev 1020

2012-08-17 belangeo <belangeo@gmail.com>

    * Added new object: OscTrig: An oscillator reading a waveform table with sample accurate reset signal.
    - rev 1017

2012-08-17 belangeo <belangeo@gmail.com>

    * Added new object: TrigVal: Outputs a previously defined value on a trigger signal.
    - rev 1016

2012-08-01 belangeo <belangeo@gmail.com>

    * Added new object: CosLogTable: Construct a table from logarithmic-cosine segments in breakpoint fashion.
    - rev 1014

2012-08-01 belangeo <belangeo@gmail.com>

    * Added new object: LogTable: Construct a table from logarithmic segments in breakpoint fashion.
    - rev 1013

2012-07-31 belangeo <belangeo@gmail.com>

    * Added new object: Balance: Adjust rms power of an audio signal according to the rms power of another.
    - rev 1012

-------------------------------------------------------------------------------------
